Improve Font Smoothing for Body Element

--- a/workspace/shadcn-ui/src/index.css
+++ b/workspace/shadcn-ui/src/index.css
@@ -111,6 +111,7 @@
     font-family: var(--font-ui);
     background-color: var(--surface-background);
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
   body {
